# sigma-permit

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  IAM_Expansion_Implementation_Todo.md  README.md  README_DEPLOYMENT.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  seed.py  startup_seeding.py  validator.js  validator.ts
.github/workflows/: build-api.yml  build-ui.yml
app/: __init__.py  auth.py  crud.py  crypto_utils.py  database.py  main.py  models.py  rate_limiter.py  schemas.py  security.py
app/models/: __init__.py  oauth.py  rbac.py
app/routers/: applications.py  auth.py  features.py  licenses.py  oauth.py  plans.py  products.py  roles.py  sessions.py  subscriptions.py  templates.py  tenants.py
app/templates/: base.html  identity_applications.html  (+12 more)
common/: crypto.py  models.py
docs/: api_expansion_plan.md  api_specifications_integration_guide.md  current_architecture_analysis.md  database_schema_extensions.md  iam_architecture_design.md  implementation_roadmap.md  migration_strategy.md  security_enhancements_design.md
license_controller/: config.py  k8s_client.py  main.py
license_server/: config.py  main.py
license_validator/: cli.py  config.py  validator.py
migrations/: add_tenant_to_users.py  create_iam_tables.py
old_ui_NOT_VALID/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
react-frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
research/: iam_competitive_analysis.md
validators/: validator.js  validator.py  validator.ts
(+67 files in other folders)
