[project]
name = "sigma-permit-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "fastapi>=0.121.3",
    "jinja2>=3.1.6",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
